--- a/AppShoppingCenter/Views/Cinemas/ListPage.xaml
+++ b/AppShoppingCenter/Views/Cinemas/ListPage.xaml
@@ -23,13 +23,13 @@
                             <TapGestureRecognizer Command="{Binding Source={x:Reference vm}, Path=TapMovieGoToDetailPageCommand}" CommandParameter="{Binding .}"/>
                         </Grid.GestureRecognizers>
                         <Border StrokeThickness="0" StrokeShape="RoundRectangle 30" WidthRequest="{OnIdiom Tablet=400, Phone=200}" HeightRequest="{OnIdiom Tablet=600, Phone=300}">
-                            <Image Source="{Binding Cover}" WidthRequest="{OnIdiom Tablet=600, Phone=300}" HeightRequest="{OnIdiom Tablet=600, Phone=300}"/>
+                            <Image SemanticProperties.Hint="{Binding UpdateSourceEventName, StringFormat='Capa do filme: {0}'}" Source="{Binding Cover}" WidthRequest="{OnIdiom Tablet=600, Phone=300}" HeightRequest="{OnIdiom Tablet=600, Phone=300}"/>
                         </Border>
                         <HorizontalStackLayout Grid.Row="1" Spacing="5" HorizontalOptions="Center" >
                             <Image Source="{AppThemeBinding Light='clock.png', Dark='clock_light.png'}" WidthRequest="{OnIdiom Tablet=30, Phone=19}"/>
-                            <Label Text="{Binding Duration}" FontSize="{OnIdiom Tablet=20, Phone=14}"/>
+                            <Label SemanticProperties.Hint="{Binding Duration, StringFormat='Duração do filme: {0:hh} horas e {0:mm} minutos'}" Text="{Binding Duration}" FontSize="{OnIdiom Tablet=20, Phone=14}"/>
                         </HorizontalStackLayout>
-                        <Label Text="{Binding Title}" FontSize="{OnIdiom Tablet=20, Phone=14}" HorizontalTextAlignment="Center"  HorizontalOptions="Center" Grid.Row="2" Style="{StaticResource PrimaryText}"/>
+                        <Label SemanticProperties.HeadingLevel="Level1" Text="{Binding Title}" FontSize="{OnIdiom Tablet=20, Phone=14}" HorizontalTextAlignment="Center"  HorizontalOptions="Center" Grid.Row="2" Style="{StaticResource PrimaryText}"/>
                     </Grid>
                 </DataTemplate>
             </CarouselView.ItemTemplate>
