--- a/AppTask/Resources/Styles/Styles.xaml
+++ b/AppTask/Resources/Styles/Styles.xaml
@@ -448,4 +448,10 @@
         <Setter Property="SelectedTabColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
+    <Style TargetType="Label" x:Key="Header">
+        <Setter Property="FontSize" Value="36" />
+        <Setter Property="Margin" Value="0,0,0,80" />
+        <Setter Property="FontAttributes" Value="Bold" />
+    </Style>
+
 </ResourceDictionary>
