--- a/AppTask/Resources/Styles/Styles.xaml
+++ b/AppTask/Resources/Styles/Styles.xaml
@@ -49,6 +49,15 @@
         </Setter>
     </Style>
 
+    <Style TargetType="Button" x:Key="ButtonWhite">
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="VerticalOptions" Value="Center"/>
+        <Setter Property="Padding" Value="5,0,5,0"/>
+        <Setter Property="BackgroundColor" Value="White"/>
+        <Setter Property="FontAttributes" Value="Italic"/>
+        <Setter Property="TextColor" Value="Black"/>
+    </Style>
+    
     <Style TargetType="CheckBox">
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
         <Setter Property="MinimumHeightRequest" Value="44"/>
